Added working database input

--- a/Firebase test/www/index.html
+++ b/Firebase test/www/index.html
@@ -19,9 +19,10 @@
 
     <h1>Hello World</h1>
 
+    <textarea id="txtAreaIn">what to store?</textarea>
     <button id="addToDb">Add to database</button>
     <button id="readDb">Read the database</button>
-    <textarea id="txtArea">data will appear here</textarea>
+    <textarea id="txtAreaOut">data will appear here</textarea>
 
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
