--- a/Firebase test/www/index.html
+++ b/Firebase test/www/index.html
@@ -19,6 +19,12 @@
 
     <h1>Hello World</h1>
 
+    <input id="email" type="text" placeholder="Email"></br>
+    <input id="password" type="text" placeholder="Password"></br>
+    <button id="login">Log In</button>
+    <button id="signup">Sign Up</button>
+    <button id="logout" class="btn btn-action hide"> Log Out</button>
+
     <textarea id="txtAreaIn">what to store?</textarea>
     <button id="addToDb">Add to database</button>
     <button id="readDb">Read the database</button>
