--- a/www/index.html
+++ b/www/index.html
@@ -35,14 +35,14 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Hello World</title>
     </head>
-    <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">$Connecting to Device!!</p>
-                <p class="event received">Device is Ready</p>
+    <body>        <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+            <div class="w3-right w3-hide-small">
+                <a href="#menu" class="w3-bar-item w3-button">Menu</a>
             </div>
         </div>
+        <div id="welcome">Wilson High School Key Club</div>
+        <div id="mainpic"></div>
+    
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
