--- a/Firebase test/www/main.html
+++ b/Firebase test/www/main.html
@@ -1,34 +1,28 @@
 ﻿<!DOCTYPE html>
-<html>
-<head>
-    <!--
-        Customize the content security policy in the meta tag below as needed. Add 'unsafe-inline' to default-src to enable inline JavaScript.
-        For details, see http://go.microsoft.com/fwlink/?LinkID=617521
-    -->
 
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    
-    <title>Firebasetest</title>
-
+    <title>App-Login</title>
 </head>
-
 <body>
 
-    <h1>Hello World</h1>
+    <h4>App</h4>
 
-    <input id="email" type="text" placeholder="Email"></br>
-    <input id="password" type="text" placeholder="Password"></br>
-    <button id="login">Log In</button>
-    <button id="signup">Sign Up</button>
+    <div id='eventDiv'>
+
+    </div>
+
+    <button id="logout">Logout</button>
 
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/platformOverrides.js"></script>
-    <script type="text/javascript" src="scripts/index.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
 
 </body>
 </html>
