--- a/www/index.html
+++ b/www/index.html
@@ -35,11 +35,9 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Hello World</title>
     </head>
-    <body>        <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-            <div class="w3-right w3-hide-small">
-                <a href="#menu" class="w3-bar-item w3-button">Menu</a>
-            </div>
-        </div>
+    <body>       
+        <button type="button" onclick="document.getElementById('demo').innerHTML=Date()">menu</button> 
+        <p id="menu"></p>
         <div id="welcome">Wilson High School Key Club</div>
         <div id="mainpic"></div>
     
