Added div borders

--- a/Back End/backEnd.html
+++ b/Back End/backEnd.html
@@ -12,7 +12,7 @@
 <body>
 
     <h1> add something </h1>
-    <input type="text" id="events">Add an Event</input> 
+    <input type="text" id="event">Add an Event</input> 
     <button type="button" id="subButton">Submit</button>
 
 
