--- a/Back End/backEnd.html
+++ b/Back End/backEnd.html
@@ -12,9 +12,21 @@
 <body>
 
     <h1> add something </h1>
-    <input type="text" id="event">Add an Event</input> 
-    <button type="button" id="subButton">Submit</button>
 
+    <div>
+
+    	Event name
+    	<input type="text" id="eventName"></input>
+
+    	Event discription
+    	<input type="text" id="eventDisc"></input>
+
+    	Time and Date
+    	<input type="datetime-local" id="eventDate"></input>
+
+    	<button type="button" id="subButton">Submit</button>
+
+	</div>
 
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script type="text/javascript" src="backEnd.js"></script>
