--- a/Back End/backEnd.html
+++ b/Back End/backEnd.html
@@ -4,7 +4,7 @@
 <head>
 
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    
+    <link rel="stylesheet" type="text/css" href="backEnd.css">
     <title>Back End</title>
 
 </head>
@@ -27,6 +27,12 @@
     	<button type="button" id="subButton">Submit</button>
 
 	</div>
+
+	<h1>Events</h1>
+
+    <div id='eventDiv'>
+
+    </div>
 
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script type="text/javascript" src="backEnd.js"></script>
