--- a/Firebase test/www/index.html
+++ b/Firebase test/www/index.html
@@ -23,6 +23,7 @@
 
     <input id="email" type="text" placeholder="Email"></br>
     <input id="password" type="text" placeholder="Password"></br>
+    <input id="name" type="text" placeholder="Name"></br>
     <button id="login">Log In</button>
     <button id="signup">Sign Up</button>
 
