--- a/Firebase test/www/signUp.html
+++ b/Firebase test/www/signUp.html
@@ -19,18 +19,19 @@
 
 <body>
 
-    <h1>Wilson Key Club</h1>
+    <h1>Sign Up</h1>
 
     <input id="email" type="text" placeholder="Email"></br>
     <input id="password" type="text" placeholder="Password"></br>
-    <button id="login">Log In</button>
+    <input id="name" type="text" placeholder="Name"></br>
     <button id="signup">Sign Up</button>
-
+    <button id="login">Log In</button>
+    
 
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="scripts/platformOverrides.js"></script>
-    <script type="text/javascript" src="scripts/index.js"></script>
+    <script type="text/javascript" src="scripts/signUp.js"></script>
 
 </body>
 </html>
