added password checker

--- a/Firebase test/www/index.html
+++ b/Firebase test/www/index.html
@@ -21,8 +21,8 @@
 
     <h1>Wilson Key Club</h1>
 
-    <input id="email" type="text" placeholder="Email"></br>
-    <input id="password" type="text" placeholder="Password"></br>
+    <input id="email" type="email" placeholder="Email"></br>
+    <input id="password" type="password" placeholder="Password"></br>
     <button id="login">Log In</button>
     <button id="signup">Sign Up</button>
 
