--- a/Firebase test/www/signUp.html
+++ b/Firebase test/www/signUp.html
@@ -21,12 +21,13 @@
 
     <h1>Sign Up</h1>
 
-    <input id="email" type="text" placeholder="Email"></br>
-    <input id="password" type="text" placeholder="Password"></br>
+    <input id="email" type="email" placeholder="Email"></br>
+    <input id="password" type="password" placeholder="Password"></br>
+    <input id="password2" type="password" placeholder="Retype Password"></br>
     <input id="name" type="text" placeholder="Name"></br>
     <button id="signup">Sign Up</button>
     <button id="login">Log In</button>
-    
+
 
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
