--- a/Firebase test/www/main.html
+++ b/Firebase test/www/main.html
@@ -15,13 +15,43 @@
 
     <button id="logout">Logout</button>
 
+    <h4>Photos</h4>
+
+    <div class="slideshow-container">
+
+        <div class="mySlides">
+            <img class="rotate" src="/www/images/20180217_114106.jpg" style="width:300px;height:300px;">
+            <div class="text">Caption One</div>
+        </div>
+
+        <div class="mySlides">
+            <img class="rotate" src="/www/images/20180217_115118.jpg" style="width:300px;height:300px;">
+            <div class="text">Caption Two</div>
+        </div>
+
+        <div class="mySlides">
+            <img class="rotate" src="/www/images/Keyclub.png" style="width:300px;height:300px;">
+            <div class="text">Caption Three</div>
+        </div>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
+
+
+
     <h4>Key Club Events</h4>
 
     <div id='eventDiv'>
 
     </div>
 
-    
+
 
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
