added login verification and fixed css

--- a/Firebase test/www/main.html
+++ b/Firebase test/www/main.html
@@ -11,9 +11,9 @@
     <title>App-Login</title>
 </head>
 <body>
-    <h3 id="name"></h3>
-
     <button id="logout">Logout</button>
+
+    <h3 id="name"></h3>
 
     <h4>Photos</h4>
 
@@ -37,7 +37,7 @@
     </div>
     <br>
 
-    <div style="text-align:center">
+    <div class="hide" style="text-align:center">
         <span class="dot"></span>
         <span class="dot"></span>
         <span class="dot"></span>
