--- a/Firebase test/www/eventPage.html
+++ b/Firebase test/www/eventPage.html
@@ -14,9 +14,13 @@
 
     <h1 id="title"></h1>
 
-    <h3 id="disc"></h3>
+    <h4 id="time"></h4>
+
+    <h3 id="discr"></h3>
 
     <button id="signUp">Sign Up</button>
+
+    <button id="back">Back</button>
 
     <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
     <script type="text/javascript" src="cordova.js"></script>
