--- a/Back End/backEnd.html
+++ b/Back End/backEnd.html
@@ -22,7 +22,7 @@
     	<input type="text" id="eventDisc"></input>
 
     	Time and Date
-    	<input type="datetime" id="eventDate"></input>
+    	<input type="datetime-local" id="eventDate"></input>
 
     	<button type="button" id="subButton">Submit</button>
 
