added hours page

--- a/Firebase test/www/main.html
+++ b/Firebase test/www/main.html
@@ -13,6 +13,8 @@
 <body>
     <button id="logout">Logout</button>
 
+    <button id="names">My Service Hours</button>
+
     <h3 id="name"></h3>
 
     <h4>Photos</h4>
